src/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: elastic-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - kibana.okstovall.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - kibana.okstovall.com
  gateways:
  - elastic-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - kibana.okstovall.com
    route:
    - destination:
        host: kibana-http.default.svc
        port:
          number: 5601
